# cucu

./: .gitignore  CLAUDE.md  Makefile  README.md  Taskfile.yml  hello.nimble
.claude/: settings.json
.claude/hooks/: pre-commit.sh  session-start.sh
.github/workflows/: test.yml
examples/: use_c_lib.c
include/: hello.h
scripts/: setup.sh
src/: hello.nim  hello_c.nim  hello_cli.nim  hello_js.nim
tests-cli/: Gemfile  cucumber.yml
tests-cli/features/: hello_cli.feature
tests-cli/features/step_definitions/: steps.rb
tests-cli/features/support/: env.rb
tests-cpp/: CMakeLists.txt  Gemfile  cucumber.yml
tests-cpp/features/: hello.feature
tests-cpp/src/: hello_steps.cpp
tests-features/: Gemfile  hello.feature
tests-features/features/: hello.feature
tests-features/features/step_definitions/: hello_steps.rb
tests-features/features/support/: env.rb
tests-js/: cucumber.js  package-lock.json  package.json
tests-js/features/: hello.feature
tests-js/features/step_definitions/: steps.js
